<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PDF Advance Tool</string>
    <string name="title">PDF Actions</string>
    <string name="file_name_text">File Name</string>
    <string name="select_images_text">Select Images</string>
    <string name="password_protect_pdf_text">Password Protect PDF</string>
    <string name="edit_images_text">Edit Images</string>
    <string name="open_pdf_text">Open PDF</string>
    <string name="create_pdf_text">Create PDF</string>
    <string name="details"><b>Details</b></string>
    <string name="search_hint">Name of file</string>
    <string name="search">search</string>
    <string name="default_content_description">no description</string>
    <string name="prompt_input">Enter here</string>
    <string name="Admob_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_unit_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="interstial_ad" translatable="false">IMG_16_9_APP_INSTALL#YOUR_PLACEMENT_ID</string>
    <string-array name="array_page_sizes_b0_b10" translatable="false">
        <item>B0 (1000 x 1414 mm)</item>
        <item>B1 (707 x 1000 mm)</item>
        <item>B2 (500 x 707 mm)</item>
        <item>B3 (353 x 500 mm)</item>
        <item>B4 (250 x 353 mm)</item>
        <item>B5 (176 x 250 mm)</item>
        <item>B6 (125 x 176 mm)</item>
        <item>B7 (88 x 125 mm)</item>
        <item>B8 (62 x 88 mm)</item>
        <item>B9 (44 x 62 mm)</item>
        <item>B10 (31 x 44 mm)</item>
    </string-array>
    <string-array name="array_page_sizes_a0_b10" translatable="false">
        <item>A0 (841 x 1189 mm)</item>
        <item>A1 (594 x 841 mm)</item>
        <item>A2 (420 x 594 mm)</item>
        <item>A3 (297 x 420 mm)</item>
        <item>A4 (210 x 297 mm)</item>
        <item>A5 (148 x 210 mm)</item>
        <item>A6 (105 x 148 mm)</item>
        <item>A7 (74 x 105 mm)</item>
        <item>A8 (52 x 74 mm)</item>
        <item>A9 (37 x 52 mm)</item>
        <item>A10 (26 x 37 mm)</item>
    </string-array>
    <string-array name="fontStyles" translatable="false">
        <item>NORMAL</item>
        <item>BOLD</item>
        <item>ITALIC</item>
        <item>UNDERLINE</item>
        <item>STRIKETHRU</item>
        <item>BOLDITALIC</item>
    </string-array>
    <string name="pdf_ext" translatable="false">.pdf</string>
    <string name="pdf_type" translatable="false">application/pdf</string>
    <string name="txt_type" translatable="false">text/*</string>
    <string name="please_wait">Please Wait</string>
    <string name="bundleKey">ImageUri</string>
    <string name="whatsappToast">Sorry! Images could not be added. Please select the images from our **Select Images** option.</string>
    <string name="successToast">Images successfully added.</string>
    <string name="create_pdf">Create PDF</string>
    <string name="qr_barcode_pdf">QR &amp; Barcodes</string>
    <string name="viewFiles">View Files</string>
    <string name="extras"><u>Extras</u></string>
    <string name="share">Share</string>
    <string name="help">Help</string>
    <string name="faqs" translatable="false">FAQ</string>
    <string name="images_to_pdf">Images to PDF</string>
    <string name="page_color">Page Color</string>
    <string name="filter_images_Text">Filter Images \n</string>
    <string name="preview_image_to_pdf">Preview PDF</string>
    <string name="choose_page_number_style">Choose Page Number Style</string>
    <string name="show_pg_num">Show page numbers</string>
    <string name="page_x_of_n">Page X of N</string>
    <string name="page_x">X of N</string>
    <string name="x">X</string>
    <string name="arrow_up">Arrow Up</string>
    <string name="arrow_down">Arrow Down</string>
    <string name="rearrange_images">Rearrange Images</string>
    <string name="rearrange_text">Rearrange</string>
    <string name="images_rearranged">Images rearranged</string>
    <string name="snackbar_undoAction">Undo</string>
    <string name="pdf_does_not_exist_message">The PDF doesn\'t exist.</string>
    <string name="image_rearranging_options">Image Rearranging Options</string>
    <string name="filter_file_name">%s_%s.jpg</string>
    <string name="compress_image">Image compression : %s %%</string>
    <string name="quality_image">Enter % compression of image :</string>
    <string name="invalid_entry">Invalid Entry</string>
    <string name="compress_dialog_enter_prompt">Enter here</string>
    <string name="compress_dialog_percentage">%</string>
    <string name="set_as_default">Set as default</string>
    <string name="add_margins">Add Margins</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="border">Add Image Border</string>
    <string name="border_dialog_title">Border width : %d</string>
    <string name="border_width_prompt">Enter border width units</string>
    <string name="image_scale_type">Set Image Scale Type</string>
    <string name="stretch_image">Stretch image to fit on page</string>
    <string name="maintain_aspect_ratio">Maintain aspect ratio of images</string>
    <string name="scan_qrcode">Scan QR code</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="qrbarcodes_to_pdf">Create PDF from QR &amp; Barcode</string>
    <string name="scan_cancelled">Cancelled Scan by user</string>
    <string name="snackbar_no_images">No Images selected</string>
    <string name="snackbar_no_pdfs_selected">No PDFs selected</string>
    <string name="snackbar_name_not_blank">Name cannot be blank</string>
    <string name="snackbar_permissions_given">Permissions Given!</string>
    <string name="snackbar_insufficient_permissions">Insufficient Permissions!</string>
    <string name="no_permissions">Please provide storage permissions to view your files.</string>
    <string name="prompt_give_permission">Provide permissions</string>
    <string name="snackbar_images_added">Images added</string>
    <string name="snackbar_file_renamed">File renamed.</string>
    <string name="snackbar_file_not_renamed">File can\'t be renamed.</string>
    <string name="snackbar_file_not_deleted">File can\'t be deleted.</string>
    <string name="snackbar_folder_not_created">Error on creating application folder.</string>
    <string name="pdf_merged">PDFs Merged</string>
    <string name="error_path_not_found">Sorry, we are unable to access the file at this location</string>
    <string name="creating_pdf">Creating PDF</string>
    <string name="creating_txt">Creating Text File</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="example">Example : abc</string>
    <string name="snackbar_no_pdf_app">No app to read PDF File</string>
    <string name="open_file">Open File</string>
    <string name="set_password">Set Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="snackbar_password_cannot_be_blank">Password cannot be blank</string>
    <string name="cannot_add_password">Password could not be applied to the PDF. Please check the PDF again.</string>
    <string name="snackbar_imagecropped">Images cropped</string>
    <string name="cropImage_activityTitle">Crop Image</string>
    <string name="snackbar_pdfCreated">PDF created!</string>
    <string name="error_uri_not_found">Sorry, We are unable to access the cropped image. Please try again</string>
    <string name="snack_bar_empty_txt_in_pdf">The chosen PDF has no text to extract!</string>
    <string name="snackbar_txtExtracted">Text extracted!</string>
    <string name="snackbar_pdfselected">PDF file selected!</string>
    <string name="snackbar_viewAction">View</string>
    <string name="more_options_text">Additional Options</string>
    <string name="snackbar_no_duplicate_pdf">Duplicate pages not found.No new PDF created.</string>
    <string name="snackbar_duplicate_removed">A new PDF is created after removal of duplicate pages.</string>
    <string name="snackbar_invert_unsuccessful">The PDF could not be inverted</string>
    <string name="snackbar_invert_successfull">Inverted</string>
    <string name="snackbar_color_too_close">Your font color and background color are too similar</string>
    <string name="excel_selected">Excel file selected</string>
    <string name="excel_to_pdf">Excel to PDF</string>
    <string name="excel_tv_view_text">Excel file selected: </string>
    <string name="select_excel_file">Select Excel file</string>
    <string name="share_chooser">Select app to send message…</string>
    <string name="rate_us_text" translatable="false">Hey it’s very useful to me if you’d check out advanced PDF tool hopefully you will definitely like this PDF tool, thanks!\n\nDownload Now:\nhttps://bit.ly/3irp5Rj</string>
    <string name="snackbar_no_share_app">No application to share.</string>
    <string name="images_selected"> %1$d image(s) selected.</string>
    <string name="no_pdf">No PDFs to show</string>
    <string name="get_started">Get Started Now</string>
    <string name="view_files_text">View all your converted files here!</string>
    <string name="empty_image_description">NoPdfs</string>
    <string name="enter_password_custom">Enter Password</string>
    <string name="example_pass_123">pass@123</string>
    <string name="remove_dialog">REMOVE</string>
    <string name="password_remove">Password Removed</string>
    <string name="merge_pdf">Merge PDF</string>
    <string name="merge_file_select">Select a file</string>
    <string name="File_hint_two" tools:keep="@string/File_hint_two">File Path for PDF two</string>
    <string name="merge_files">MERGE FILES</string>
    <string name="file_date_text">File Date</string>
    <string name="file_size_text">File Size</string>
    <string name="encrypted_file">_encrypted.pdf</string>
    <string name="i_have_attached_pdfs_to_this_message">I have attached file(s) to this message</string>
    <string name="btn_sav_text">savText</string>
    <string name="nextimage_contentdesc">Next Image</string>
    <string name="decrypted_file">_unencrypted.pdf</string>
    <string name="decrypt_message">Enter the password to continue</string>
    <string name="text_to_pdf">Text To PDF</string>
    <string name="app_description">An easy to use Android application to convert your files to PDF.</string>
    <string name="version">Version : </string>
    <string name="playstore">Rate us on Playstore</string>
    <string name="history">History</string>
    <string name="extract_images">Extract Images</string>
    <string name="extract_text">Extract Text</string>
    <string name="split_pdf">Split PDF</string>
    <string name="remove_pages">Remove Pages</string>
    <string name="compress_pdf">Compress PDF</string>
    <string name="compress_pdf_prompt">Enter % compression of PDF : </string>
    <string name="compress_info">Congratulations! Your PDF is compressed: \n Original PDF Size : %s \n Compressed PDF Size: %s</string>
    <string name="pdf_to_images">PDF to Images</string>
    <string name="remove_duplicate_pages">Remove Duplicate Pages</string>
    <string name="invert_pdf">Invert Pdf</string>
    <string name="rotate_pages">Rotate Pages</string>
    <string name="theme_white">White</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_black">Black</string>
    <string name="view_pdf">View PDF</string>
    <string name="add_password">Add password</string>
    <string name="add_text">Add Text</string>
    <string name="reorder_pages">Reorder Pages</string>
    <string name="remove_password">Remove password</string>
    <string name="add_watermark">Add Watermark</string>
    <string name="add_images">Add Images</string>
    <string name="zip_to_pdf">ZIP to PDF</string>
    <string name="favourites_text">Select + icon to add your favourite features!</string>
</resources>