<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/mb_white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <pdf.pdftool.customviews.MyCardView
                    android:id="@+id/images_to_pdf_fav"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:visibility="gone"
                    app:option_icon="@drawable/ic_image_to_pdf"
                    app:option_text="Images to PDF" />

                <pdf.pdftool.customviews.MyCardView
                    android:id="@+id/text_to_pdf_fav"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:visibility="gone"
                    app:option_icon="@drawable/ic_text_to_pdf"
                    app:option_text="@string/text_to_pdf" />

                <pdf.pdftool.customviews.MyCardView
                    android:id="@+id/qr_barcode_to_pdf_fav"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:visibility="gone"
                    app:option_icon="@drawable/ic_qr_barcode"
                    app:option_text="@string/qr_barcode_pdf" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <pdf.pdftool.customviews.MyCardView
                    android:id="@+id/view_files_fav"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:visibility="gone"
                    app:option_icon="@drawable/ic_view_files"
                    app:option_text="@string/viewFiles" />

                <pdf.pdftool.customviews.MyCardView
                    android:id="@+id/view_history_fav"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:visibility="gone"
                    app:option_icon="@drawable/ic_history"
                    app:option_text="@string/history" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <pdf.pdftool.customviews.MyCardView
                    android:id="@+id/add_password_fav"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:visibility="gone"
                    app:option_icon="@drawable/ic_add_password"
                    app:option_text="@string/add_password" />

                <pdf.pdftool.customviews.MyCardView
                    android:id="@+id/remove_password_fav"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:visibility="gone"
                    app:option_icon="@drawable/ic_remove_password"
                    app:option_text="@string/remove_password" />

                <pdf.pdftool.customviews.MyCardView
                    android:id="@+id/add_text_fav"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:visibility="gone"
                    app:option_icon="@drawable/ic_add_text"
                    app:option_text="@string/add_text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <pdf.pdftool.customviews.MyCardView
                    android:id="@+id/rotate_pages_fav"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:visibility="gone"
                    app:option_icon="@drawable/ic_rotate_page"
                    app:option_text="@string/rotate_pages" />

                <pdf.pdftool.customviews.MyCardView
                    android:id="@+id/add_watermark_fav"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:visibility="gone"
                    app:option_icon="@drawable/ic_add_watermark"
                    app:option_text="@string/add_watermark" />

                <pdf.pdftool.customviews.MyCardView
                    android:id="@+id/add_images_fav"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:visibility="gone"
                    app:option_icon="@drawable/ic_add_image"
                    app:option_text="@string/add_images" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <pdf.pdftool.customviews.MyCardView
                    android:id="@+id/merge_pdf_fav"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:visibility="gone"
                    app:option_icon="@drawable/ic_merge_pdf"
                    app:option_text="@string/merge_pdf" />

                <pdf.pdftool.customviews.MyCardView
                    android:id="@+id/split_pdf_fav"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:visibility="gone"
                    app:option_icon="@drawable/ic_split_pdf"
                    app:option_text="@string/split_pdf" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <pdf.pdftool.customviews.MyCardView
                    android:id="@+id/invert_pdf_fav"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:visibility="gone"
                    app:option_icon="@drawable/ic_invert_pdf"
                    app:option_text="@string/invert_pdf" />

                <pdf.pdftool.customviews.MyCardView
                    android:id="@+id/compress_pdf_fav"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:visibility="gone"
                    app:option_icon="@drawable/ic_compress_pdf"
                    app:option_text="@string/compress_pdf" />

                <pdf.pdftool.customviews.MyCardView
                    android:id="@+id/remove_duplicates_pages_pdf_fav"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:visibility="gone"
                    app:option_icon="@drawable/ic_remove_duplicate"
                    app:option_text="@string/remove_duplicate_pages" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <pdf.pdftool.customviews.MyCardView
                    android:id="@+id/remove_pages_fav"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:visibility="gone"
                    app:option_icon="@drawable/ic_remove_pages"
                    app:option_text="@string/remove_pages" />

                <pdf.pdftool.customviews.MyCardView
                    android:id="@+id/rearrange_pages_fav"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:visibility="gone"
                    app:option_icon="@drawable/ic_reorder_pages"
                    app:option_text="@string/reorder_pages" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <pdf.pdftool.customviews.MyCardView
                    android:id="@+id/extract_images_fav"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:visibility="gone"
                    app:option_icon="@drawable/ic_extrace_images"
                    app:option_text="@string/extract_images" />

                <pdf.pdftool.customviews.MyCardView
                    android:id="@+id/extract_text_fav"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:visibility="gone"
                    app:option_icon="@drawable/ic_extract_text"
                    app:option_text="@string/extract_text"/>

                <pdf.pdftool.customviews.MyCardView
                    android:id="@+id/pdf_to_images_fav"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:visibility="gone"
                    app:option_icon="@drawable/ic_pdf_to_image"
                    app:option_text="@string/pdf_to_images" />

                <pdf.pdftool.customviews.MyCardView
                    android:id="@+id/excel_to_pdf_fav"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:visibility="gone"
                    app:option_icon="@drawable/ic_excel_to_pdf"
                    app:option_text="@string/excel_to_pdf" />

                <pdf.pdftool.customviews.MyCardView
                    android:id="@+id/zip_to_pdf_fav"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:visibility="gone"
                    app:option_icon="@drawable/ic_zip_to_pdf"
                    app:option_text="@string/zip_to_pdf" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/favourites"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/favourites" />

    <TextView
        android:id="@+id/favourites_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favourites_text"
        android:textSize="16sp"
        app:layout_anchor="@id/favourites"
        android:fontFamily="@font/sarabunbold"
        app:layout_anchorGravity="bottom"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:paddingTop="8dp"
        android:textStyle="bold"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fav_add_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:background="@color/colorPrimary"
        app:rippleColor="@color/colorPrimaryDark"
        android:src="@drawable/ic_add_black_24dp"
        android:tint="@android:color/white"
        android:translationZ="12dp"
        android:focusable="true" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>