<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:stretchColumns="*"
        tools:context=".fragment.AddImagesFragment">

        <com.dd.morphingbutton.MorphingButton
            android:id="@+id/selectFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="24dp"
            android:maxWidth="30dp"
            android:fontFamily="@font/sarabunregular"
            style="@style/MorphingButton"
            android:text="@string/merge_file_select"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/infoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="24dp"
            android:fontFamily="@font/sarabunregular"
            android:text="@string/compress_pdf_prompt" />

        <EditText
            android:labelFor="@id/infoText"
            android:id="@+id/pages"
            android:hint="@string/prompt_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="24dp"
            android:fontFamily="@font/sarabunregular"
            android:inputType="number"
            android:autofillHints="" />

        <TextView
            android:id="@+id/compressionInfoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="24dp"
            android:visibility="gone"
            android:text="@string/compress_info" />

        <com.dd.morphingbutton.MorphingButton
            android:id="@+id/pdfCreate"
            style="@style/MorphingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="24dp"
            android:text="@string/create_pdf"
            android:fontFamily="@font/sarabunregular"
            app:layout_constraintBottom_toTopOf="@id/recyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView" />

        <Button
            android:id="@+id/view_pdf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_pdf"
            android:fontFamily="@font/sarabunregular"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="24dp"
            android:visibility="gone"
            android:background="@color/mb_green"/>

    </LinearLayout>

    <include layout="@layout/bottom_sheet" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
