<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".utilities.AboutUsFragment">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/default_content_description"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textSize="25sp"
            android:fontFamily="@font/sarabunbold"
            android:textStyle="bold" />

        <TextView
            style="AppThemeWhite.AboutUSTextViewSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:padding="8dp"
            android:fontFamily="@font/sarabunregular"
            android:text="@string/app_description"
            android:textSize="13sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/version_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/sarabunregular"
                    android:drawablePadding="15dp"
                    android:padding="8dp"
                    android:text="@string/version"
                    tools:targetApi="m"
                    app:drawableStartCompat="@drawable/ic_version_white_24dp"
                    app:drawableTint="?attr/historyIconColor" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawablePadding="15dp"
                android:padding="8dp"
                android:fontFamily="@font/sarabunregular"
                android:text="@string/playstore"
                tools:targetApi="m"
                app:drawableStartCompat="@drawable/ic_playstore"
                app:drawableTint="?attr/historyIconColor" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>