<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".QrBarcodeScanFragment"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:fontFamily="@font/sarabunbold"
            android:text="@string/qrbarcodes_to_pdf"
            android:textSize="17sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <pdf.pdftool.customviews.MyCardView
                android:id="@+id/scan_qrcode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                app:option_icon="@drawable/ic_qr_barcode"
                app:option_text="@string/scan_qrcode" />

            <pdf.pdftool.customviews.MyCardView
                android:id="@+id/scan_barcode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                app:option_icon="@drawable/ic_barcode"
                app:option_text="@string/scan_barcode" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>